# DAQ-To-DB

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/static/: index.js
src/app/: app.py
src/app/static/: index.js
src/app/templates/: index.html
src/known-to-influxdb/: convert_unix_time.py  do_them_all.py  line_protocol.py  write_to_influxDB.py  write_to_influxDB_DEFUNCT.py
src/known_to_influxdb/: convert_unix_time.py  line_protocol.py  write_to_influxDB.py
src/known_to_influxdb/influxdb2_parameters/: influxdb2-admin-token
src/unknown-to-known/: NEW_MOTEC_MESSAGES.dbc  decode.py
src/unknown_to_known/: decode.py
static/: index.css
